--- a/npm-cheating/style.css
+++ b/npm-cheating/style.css
@@ -17,9 +17,9 @@ nav a {
 }
 .top-links {
     display: inline-block;
-    float: right;
     padding: 0;
     margin: 0 20px 0 0;
+    float:right;
 }
   
 .top-links li {
@@ -62,7 +62,10 @@ nav a {
     border: 1px solid #000f26;
     width: 90%;
     padding: 0px 5px;
-
+}
+.logobear {
+    width: 35%;
+    padding-top: 3px;
 }
 #bear-logo {
     max-width: 60%;
@@ -78,7 +81,7 @@ nav a {
 .heading-txt {
     margin: 0 auto;
     color: white;
-    padding: 15px 0 10px 8em;
+    width: 64%;
 }
 .sign-in {
     color: white;
@@ -112,13 +115,14 @@ nav a {
 /* sec 2 */
 .section-2 {
     background-image: url(images/forklift.svg);
-    min-width: 100%;
+    width: 100%;
     height: 300px;
     color: white;
-    margin: 0 auto;
+    justify-content: center;
 }
 .container-2 {
-    padding: 80px 0 10px 150px;
+    padding: 40px 235px;
+    width: 40%;
 }
 .install-btn {
     color: white;
@@ -157,6 +161,7 @@ nav a {
     color: rgb(135, 145, 156);
     padding: 0 30px;
 }
-b {
+
+.highlight {
     color: rgb(208, 74, 73)
 }
